fix git ftp ... it worked ..

--- a/assets/sass/blocks.scss
+++ b/assets/sass/blocks.scss
@@ -2,7 +2,7 @@
 @import "base/_mixins.scss";
 
 /*--------------------------------------------------------------
-# Common styles: Grid 
+# Common styles: Grid  XXO©
 --------------------------------------------------------------*/
 .wp2-container {
   padding-left: var(--wp--style--block-gap);
