--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -11,7 +11,7 @@
 }
 
 /*--------------------------------------------------------------
-# General
+# General.
 --------------------------------------------------------------*/
 body {
   -webkit-font-smoothing: antialiased;
