--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://6clicks.ch
 Author: John Robert-Nicoud | 6clicks
 Author URI: https://6clicks.ch
 Description:
-Tags: full-site-editing, starter theme
+Tags: full-site-editing, starter theme, Gulp ready  
 Version: 1.0.0
 Requires at least: 5.0
 Tested up to: 5.7
