--- a/assets/css/blocks.css
+++ b/assets/css/blocks.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 /*--------------------------------------------------------------
-# Common styles: Grid 
+# Common styles: Grid  XXO©
 --------------------------------------------------------------*/
 .wp2-container {
   padding-left: var(--wp--style--block-gap);
