--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ input[type=submit] {
 }
 
 /*--------------------------------------------------------------
-# General
+# General.
 --------------------------------------------------------------*/
 body {
   -webkit-font-smoothing: antialiased;
